--- a/Описание проекта.MD
+++ b/Описание проекта.MD
@@ -18,25 +18,37 @@
 
 ![Работа приложения](./images/1XTLGaF96J.gif)
 
+В рамках данного проекта возможно масштабирование для создания бесед для нескольких групп. Для этого необходимо изменить ssh-адрес беседы в файле конфигураций. Например, одна группа размещена на порте 2200, а другая - 2201.
+
 ## Как это работает
 
-Сама программа написана на языке JavaScript, фреймворк Node.JS
+Сама программа написана на языке JavaScript, фреймворк Node.JS. При разработке использовалась технология server-side rendering, позволяющая управлять содержанием окна пользователя на стороне сервера. Подробнее о применении этой технологии написано в разделе **Server-Side Rendering**.
+
+### Запуск проекта
 
 На машине сервера запускается программа, в которой подключается необходимый для создания ssh соединения пакет - ssh2. Затем загружаются необходимые конфигурации сервера, доступные команды, сообщения сервера для приветствия и описания доступных команд. Эти данные записываются в глобальную переменную, которая будет доступна из любой точки приложения. Сервер запускается на порте, указанном в файле конфигураций.
 
 ![Листинг главного файла проекта](./images/2020-05-27-12-28-51.png)
 
+### Подключение серверу
+
 При подключении пользователя к серверу, производится создание объекта пользователя и обработчики событий для этого пользователя. Когда пользователь пытается войти в беседу запускается функция-обработчик авторизации. Сначала проверяется, допустим ли ник пользователя, и, если ник не доступен, предлагает ему ввести другой ник. Когда введён допустимый ник пользователь попадает в беседу.
 
 ![Листинг обработчика авторизации](./images/2020-05-27-12-31-54.png)
+
+### Обработка событий
 
 Также описаны функции, выполняемые, когда пользователь готов к получению и отправке сообщений, когда пользователь выходит из чата и функция-заглушка, не приводящая к падению сервера, когда происходит какая-либо ошибка.
 
 ![Используемые обработчики событий](./images/2020-05-27-12-33-59.png)
 
+### Функции-помощники
+
 Были разработаны функции-помощники, которые позволяют, например, регистрировать всё, что происходит на сервере: подключение/отключение пользователей, сообщения и так далее.
 
 ![Функции-помощники](./images/2020-05-27-12-36-01.png)
+
+### Server-Side Rendering
 
 Обработка оболочки терминала пользователей происходит на стороне сервера. При подключении и, например, изменении размера окна терминала, происходит обращение пользователя к серверу с целью отобразить все необходимые данные беседы.
 
